--- a/exercicios.html
+++ b/exercicios.html
@@ -13,6 +13,7 @@
             margin-top: 20px;
             padding: 4px;
             min-height: 40px;
+            width: 300px;
         }
     </style>
 
@@ -21,7 +22,7 @@
     <h1>Exercicios</h1>
     <input type="text" id="entrada" />
 
-    <button onclick="ex97()">Ex 97</button>
+    <button onclick="ex97alt()">Ex 97</button>
     <div id="resposta">
     </div>
 </body>
